--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
@@ -4,7 +4,7 @@
 /*动态发布*/
 .feed_post {width:100%;margin-bottom:20px;padding:30px 40px;border-radius:3px;background:white;}
 .feed_post .input-wrap {position: relative;width: 100%;min-height: 158px;}
-.feed_post .input-wrap .post_textarea {display: inline-block;position: absolute;width:100%;height:100%;overflow: hidden auto;outline: none;resize: none;white-space: pre-wrap;cursor: auto;padding: 10px;z-index: 101;top: 0;border: 1px solid #ededed;background-color: #f3f6f7;}
+.feed_post .input-wrap .post_textarea {display: block;position: absolute;width:100%;height:100%;overflow: hidden auto;outline: none;resize: none;white-space: pre-wrap;cursor: auto;padding: 10px;z-index: 101;top: 0;border: 1px solid #ededed;background-color: #f3f6f7;}
 .feed_post .input-wrap #mirror {z-index: 101;}
 .feed_post .input-wrap #feed_content {z-index: 102;}
 .feed_post .input-wrap .dy_cs {position:absolute;right:15px;bottom:10px;font-size:12px;z-index: 109;}
