style(SPA): 解决 MobLink 样式覆盖自定义样式的问题

--- a/resources/spa/src/style/moblink.less
+++ b/resources/spa/src/style/moblink.less
@@ -1,6 +1,6 @@
 #mobLink .mob-box .mob-download-tips  {
   top: 0;
-  bottom: initial;
-  z-index: 100;
+  bottom: initial !important;
+  z-index: 100 !important;
   background-color: rgba(0,0,0,.6) !important;
 }
