fix(SPA): 解决某些情况下边框消失的问题(no 1px to rem)

--- a/resources/spa/src/components/form/formItem.less
+++ b/resources/spa/src/components/form/formItem.less
@@ -6,7 +6,7 @@
   font-size: 30px;
   padding-left: 20px;
   color: #999;
-  border-bottom: 1px solid @border-color;
+  border-bottom: 1px solid @border-color; /* no */
 
   > label {
     display: inline-block;
@@ -36,6 +36,6 @@ form {
   }
 
   .input-wrap {
-    border-bottom: 1px solid @border-color;
+    border-bottom: 1px solid @border-color; /* no */
   }
 }
