--- a/resources/spa/src/page/message/style.less
+++ b/resources/spa/src/page/message/style.less
@@ -96,7 +96,7 @@
     }
     &-item {
         padding: 20px;
-        border-bottom: #f6f6f6 1px solid;
+        border-bottom: #f6f6f6 1px solid; /* no */
         background-color: #fff;
 
         .red {
@@ -212,7 +212,7 @@
 .audit-operation {
     margin-right: 0;
     color: #4bb893;
-    border: 1px solid #4bb893;
+    border: 1px solid #4bb893; /* no */
     border-radius: 20px;
     padding: 0px 20px;
     font-size: 22px;
