--- a/resources/spa/src/plugins/imgCropper/imgCropper.less
+++ b/resources/spa/src/plugins/imgCropper/imgCropper.less
@@ -327,8 +327,7 @@
         width: 100%;
         height: 90px;
         background-color: #fff;
-        border-bottom: 1px solid #ededed;
-        /*no*/
+        border-bottom: 1px solid #ededed; /*no*/
         box-shadow: 0 5px 10px 0 #ededed;
         display: flex;
         justify-content: space-between;
