--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -191,7 +191,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    border: 1px solid rgba(230, 230, 230, 0.5);
+    border: 1px solid rgba(230, 230, 230, 0.5); /* no */
     border-radius: 50%;
   }
   &.def,
@@ -707,7 +707,7 @@
     line-height: 88px;
     font-size: 30px;
     color: @text-color3;
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid transparent; /* no */
     &.active {
       color: @text-color1;
     }
