chore(SPA): 话题详情页
issue #467

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -37,12 +37,11 @@
 /* base spinner */
 .m-spinner {
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: #fff;
-  pointer-events: none;
+  top: -100%;
+  left: -100%;
+  bottom: -100%;
+  right: -100%;
+  background-color: rgba(255,255,255, 0.7);
 
   &::after,
   &::before {
