--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -127,7 +127,11 @@ a {font-size:100%;vertical-align:baseline;background:transparent;text-decoration
 /*右侧浮动*/.right_extras {position:fixed;z-index:2;right:80px;bottom:80px;}
 .right_extras a {display:block;width:48px;height:48px;margin-bottom:10px;text-align:center;border-radius:50%;}
 .right_extras svg {font-size:34px;display:block;margin-bottom:10px;padding-top:11px;padding-left:12px;color:#fff;}
-.right_extras .app {background:#dedede;}
+.right_extras .app {background:#dedede;position: relative;}
+.right_extras .app .qrcode-wrap {position: absolute;right: 120%;top: -20px;padding: 10px;background-color: #fff;display: none;width: 140px;height: 160px;align-items: center;justify-content: center;flex-direction: column;box-shadow: 0 0 6px rgba(0, 0, 0, 0.09);}
+.right_extras .app:hover .qrcode-wrap {display: flex;}
+.right_extras .app .qrcode-wrap img {width: 120px;height: 120px;}
+.right_extras .app .qrcode-wrap span {display: block;height: 10px;line-height: 10px;margin-top: 10px;color: #999;font-size: 14px;}
 .right_extras .gotop {background:#59b6d7;}
 .right_extras .gotop svg {font-size:40px !important;padding-left:8px !important;}
 /*热门用户*/.hot_users {width:100%;background:#fff;}
