refactor(SPA): 抽出文章点赞、打赏小组件
issue slimkit/plus#512

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -154,7 +154,7 @@
   flex: none;
   width: 76px;
   height: 76px;
-  background: #999 center / cover no-repeat;
+  background: transparent center / cover no-repeat;
   border-radius: 50%;
   color: #fff;
   text-align: center;
