style(SPA): 修改动态详情没有内容时的占位图
issue slimkit/plus#512

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -635,10 +635,10 @@
 
 /* 占位图 */
 .m-no-find {
-  background-size: 400px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../images/img_default_search@2x.png");
+  background: url("../images/img_default_search@2x.png") center / 400px no-repeat;
+}
+.m-no-content {
+  background: @gray-bg url('../images/img_default_nothing@2x.png') center / 400px no-repeat;
 }
 .c_59b6d7 {
   color: @primary;
