style(SPA): 修改动态详情没有内容时的占位图
issue slimkit/plus#512

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -638,6 +638,8 @@
   background: url("../images/img_default_search@2x.png") center / 400px no-repeat;
 }
 .m-no-content {
+  width: 100%;
+  height: 600px;
   background: @gray-bg url('../images/img_default_nothing@2x.png') center / 400px no-repeat;
 }
 .c_59b6d7 {
