--- a/resources/spa/src/style/theme.less
+++ b/resources/spa/src/style/theme.less
@@ -1,7 +1,7 @@
 @primary: #59b6d7;
 @success: #28b350;
 @warning: #ff9400;
-@error: #f4504d;
+@error: #f76c69;
 @gray: #ccc;
 @body-bg: #fff;
 @gray-bg: #f4f5f6;
