style(SPA): 优化全局 loading 样式
(cherry picked from commit b7993e55c968d713396e9b1b29a8f3b686be2b91)

# Conflicts:
#	resources/spa/src/page/article/ArticleCard.vue
#	resources/spa/src/page/group/detail/GroupDetail.vue
#	resources/spa/src/page/question/TopicDetail.vue

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -43,23 +43,26 @@
   right: 0;
   background-color: #fff;
   pointer-events: none;
-  > div {
-    overflow: hidden;
+
+  &::before,
+  &::after {
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     margin: auto;
-    width: 50px; /*no*/
-    height: 50px; /*no*/
+    width: 100px;
+    height: 100px;
     opacity: 0.5;
     border-radius: 100%;
     background-color: @primary;
     animation: scale1 2s infinite ease-in-out;
-    &:nth-child(2) {
-      animation-delay: -1s;
-    }
+  }
+
+  &::after {
+    animation-delay: -1s;
   }
 }
 
