refactor(SPA): 重构消息系统

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -153,7 +153,7 @@
 .m-avatar-box {
   display: inline-block;
   position: relative;
-  margin: 0 auto;
+  // margin: 0 auto;
   flex: none;
   width: 76px;
   height: 76px;
