--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -153,7 +153,7 @@
 .m-avatar-box {
   display: inline-block;
   position: relative;
-  // margin: 0 auto;
+  margin: 0 auto;
   flex: none;
   width: 76px;
   height: 76px;
@@ -752,38 +752,4 @@
   animation-duration: 1.4s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-}
-
-// header switch-bar
-.type-switch-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 90px;
-
-  > span {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 3em;
-    margin: 0 1em;
-    color: #999;
-    transition: 0.3s;
-
-    &.active {
-      color: #333;
-
-      &::after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        display: block;
-        height: 3px;/*no*/
-        width: 100%;
-        background-color: @primary;
-      }
-    }
-  }
 }
