--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
@@ -66,9 +66,10 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .feed_item .feed_body .more_count_div{position:absolute;width:33.3%;height:33.3%;right:1px;top: 66.6%;background: #000;opacity: 0.2;border:1px solid #fff;}
 .feed_item .feed_body .more_count{position:absolute;right:65px;top:420px;color:#fff;font-size:56px;}
 /* 多图片样式 */
+.image_box_one {position: relative;display: inline-block;}
 .image_box {position:relative;left:-1px;overflow:hidden;margin-bottom:2px;padding:0 2px;}
 .image_box .per_image {position:absolute;top:0;left:2px;width:100%;height:100%;object-fit:cover;}
-.image_box .gif_badge {position: absolute;bottom: 0;right: 0;background-color: #5dc8ab;color: #fff;font-size: 80%;padding: 1px 4px;}
+.image_box .gif_badge, .image_box_one .gif_badge {position: absolute;bottom: 0;right: 0;background-color: #5dc8ab;color: #fff;font-size: 80%;padding: 1px 4px;}
 .image_box .long_badge {position: absolute;bottom: 0;right: 0;background-color: #c8a06c;color: #fff;font-size: 80%;padding: 1px 4px;}
 .image_box.playing .gif_badge{display: none;}
 .image_box:before {display:block;padding-top:100%;content:'';}
