--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/message.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/message.css
@@ -128,7 +128,7 @@
 .chat_mention_card {width: 100%;padding: 20px 0;display: flex;flex-direction: row;border-bottom: 1px solid #ededed;}
 .chat_mention_card img {width: 40px;height: 40px;margin-right: 20px;flex:none;}
 .chat_mention_card .mention_info {display: flex;flex-direction: column;flex: auto;}
-.chat_mention_card .content {font-size: 14px;background-color: #f5f5f5;padding: 10px;color: #666;margin-top: 10px;}
+.chat_mention_card .content {font-size: 14px;background-color: #f5f5f5;padding: 10px;color: #666;margin-top: 10px;cursor: pointer;}
 .chat_mention_card .content a {color: #59b6d7;}
 .chat_mention_card .name {font-size: 14px;}
 .chat_mention_card .time {font-size: 14px;color: #ccc;margin: 10px 0;}
