merge: 合并laravel-v5.8.16并解决一些数据表方面的问题,使用的新的构建方法编译管理页面代码

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -16,8 +16,9 @@ $brand-warning: #cbb956;
 $brand-danger: #bf5329;
 
 // Typography
+$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+$font-size-base: 14px;
 $line-height-base: 1.6;
 $text-color: #636b6f;
 
@@ -32,6 +33,8 @@ $input-border: lighten($text-color, 40%);
 $input-border-focus: lighten($brand-primary, 25%);
 $input-color-placeholder: lighten($text-color, 30%);
 
+// Panels
+$panel-default-heading-bg: #fff;
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
