chore: 修复一些h5的问题

--- a/resources/spa/src/style/common.less
+++ b/resources/spa/src/style/common.less
@@ -693,6 +693,7 @@
         content: '';
         position: absolute;
         bottom: 0;
+        left: 0;
         display: block;
         height: 3px;/*no*/
         width: 100%;
